--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^7.0.0",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "hoek": "^4.2.1"
   }
 }
